--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import './components/banners/banner.scss';
+@import './components/Footer/footer.scss';
+
+
+* {
+  font-family: 'Montserrat';
+}
+
+a {
+  text-decoration: none;
+}
+
+h3 {
+  padding-left: 3vw;
+  padding-right: 3vw;
+}
+
+p {
+  text-align: justify;
+}
+
 .App {
   text-align: center;
 }
@@ -32,6 +54,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
