--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -2,7 +2,7 @@ footer {
     position: relative;
     top: 80px;
     background-color: #3f353b;
-    color: #fcbc0e;
+    color: #FFD700;
     height: 100px;
     display: flex;
     align-items: center;
