Ajout des competences

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import './components/banners/banner.scss';
 @import './components/Footer/footer.scss';
 @import './components/presentation/presensation.scss';
+@import './components//outils/outils.scss';
 
 * {
   font-family: 'Montserrat';
