Ajout des projets mais manques les liens

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 @import './components/Footer/footer.scss';
 @import './components/presentation/presensation.scss';
 @import './components//outils/outils.scss';
+@import './components/projet/projet.scss';
 
 * {
   font-family: 'Montserrat';
