--- a/src/components/outils/outils.scss
+++ b/src/components/outils/outils.scss
@@ -1,5 +1,6 @@
 .competence {
     padding-top: 70px;
+    padding-bottom: 100px;
     &__content {
         display: flex;
         flex-wrap: wrap;
@@ -9,6 +10,7 @@
         border-radius: 25px;
         margin: 0 5%;
         padding: 30px;
+        background-color: #eef09d;
     }
 
 
