--- a/src/components/presentation/presensation.scss
+++ b/src/components/presentation/presensation.scss
@@ -20,6 +20,7 @@ $tertiary-color: #f0f0f0 ;
         border-radius: 25px;
         padding: 30px;
         margin: 0 5%;
+        background-color: #eef09d;
     }
   
     &__image img {
