--- a/src/components/banners/banner.scss
+++ b/src/components/banners/banner.scss
@@ -18,6 +18,7 @@ nav {
     position: fixed;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: #3f353b;
     color: #FDEFF5;
     width: 100%;
@@ -39,3 +40,37 @@ nav a:visited {
 nav a:hover {
     font-weight: bold;
 }
+
+
+
+@media (max-width : 768px) {
+    nav {
+  
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #3f353b;
+        color: #FDEFF5;
+        width: 100%;
+        z-index: 1;
+        top: 0;
+        padding: 10px;
+    }
+}
+h1, ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 0px;
+    margin-block-end: 0px;
+    
+}
+nav li {
+    margin-left: 20px;
+    position: relative;
+    top: 10px;
+    right: 10%;
+    
+}
+
