install de react-helmet pour le meta

--- a/src/components/outils/outils.scss
+++ b/src/components/outils/outils.scss
@@ -20,7 +20,8 @@
 }
 
 .competence__card {
-    width: 10%;
+    width: 130px;
+    height: auto;
     border: 2px solid #747272;
     padding: 10px;
     cursor: pointer;
