--- a/src/components/banners/banner.scss
+++ b/src/components/banners/banner.scss
@@ -28,7 +28,7 @@ nav {
 }
 
 h1 {
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Montserrat';
 }
 
 nav a,
