--- a/src/components/presentation/presensation.scss
+++ b/src/components/presentation/presensation.scss
@@ -4,9 +4,7 @@
     justify-content: center;
 }
 
-$primary-color: #06011d;
-$secondary-color: #082ebd;
-$tertiary-color: #f0f0f0 ;
+
 
 .info {
     margin-top: 140px;
@@ -38,7 +36,7 @@ $tertiary-color: #f0f0f0 ;
             font-weight: bold; 
             display: inline-block;
             padding: 10px 20px;
-            border: 1px solid $secondary-color;
+            border: none;
             cursor: pointer;
             transition: background 0.6s ease, color 0.4s ease, box-shadow 0.4s ease, transform 0.3s ease;
             border-radius: 4px;
@@ -56,29 +54,14 @@ $tertiary-color: #f0f0f0 ;
                 }
             }
     
-            // Effet de pulsation
-            &::before {
-                content: '';
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                width: 300%;
-                height: 300%;
-                background: rgba($secondary-color, 0.2);
-                border-radius: 50%;
-                transform: translate(-50%, -50%) scale(0);
-                transition: transform 0.5s ease;
-            }
-    
-            &:hover::before {
-                transform: translate(-50%, -50%) scale(1);
-            }
+  
     
             &:hover {
                 background: green;
                 color: white;
                 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
                 transform: scale(1.35);
+                border: 2px solid goldenrod;
                 animation: none; // Arrête le clignotement au survol
             }
         }
