--- a/src/components/projet/projet.scss
+++ b/src/components/projet/projet.scss
@@ -69,6 +69,7 @@
     background-color: lighten(black, 5%);
   }
   
+  // fais glisser
   .portfolio__content {
     position: relative;
     @include flex-center;
